# rexware

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  docker-compose.yml  main.py  package-lock.json  package.json  setup.sh  test_combos.py  test_friend_accept.py  test_minimal.py  test_raw_http.py  test_rel_accept.py  test_send_dm.py  test_setup.py  vite.config.ts
bot/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
bot/src/: ai_chat.rs  auth.rs  config.rs  handler.rs  log.rs  main.rs  packet.rs  persona.rs  proxy.rs  report.rs  webhook.rs  world_view.rs
docker/: README.md
docker.backup/: .env.example
docker.backup/bot/: .dockerignore  bot_runner.py
docker/bot/: Dockerfile  bot_runner.py  requirements.txt
nginx/: minefleet.conf
scripts/: deploy.sh
src/: routeTree.gen.ts  server.ts  styles.css
src/bot/: channels.ts  commands.ts  components.ts  handlers.ts  index.ts  mainbot-ai.ts  mainbot-handlers.ts  otp.ts  register-commands.ts
src/components/: AdminOtpCard.tsx  AuthErrorDialog.tsx  BannedDialog.tsx  BotCard.tsx  BotGuideDialog.tsx  BotHoursPurchaseSection.tsx  BotsManager.tsx  CommandPalette.tsx  CryptoInvoiceFlow.tsx  CustomActionsDialog.tsx  DeployBotWizard.tsx  DeployWizard.tsx  DiscordDmPanel.tsx  GlobalChatSection.tsx  GuideDialog.tsx  GuildChatSection.tsx  LiveActivityFeed.tsx  LoginDialog.tsx  NotificationsPanel.tsx  PurchasePage.tsx  ServerIcon.tsx  SettingsDialog.tsx  SkinView.tsx  SplashLogo.tsx  TabbedBotManager.tsx  TosDialog.tsx  WizardModals.tsx  docs-renderer.tsx
src/components/admin/: DockerTab.tsx  PresetsTab.tsx  UserModPanel.tsx
src/components/ui/: dialog.tsx
src/lib/: _otest.txt  auth.server.ts  config.server.ts  cryptapi.server.ts  db.server.ts  discord-webhooks.server.ts  docker.server.ts  error-page.ts  preferences.tsx  repos.server.ts  totp.server.ts  totp.ts  vpn.server.ts
src/lib/api/: admin.functions.ts  auth.functions.ts  bots.client.ts  bots.functions.ts  dashboard.functions.ts  docker.functions.ts  keys.functions.ts  plugins.functions.ts  presets.functions.ts  vpn.functions.ts
src/lib/i18n/: dictionaries.ts  docs-content.ts  plan-text.ts
src/routes/: __root.tsx  admin.tsx  blocked.tsx  changelog.tsx  dash.tsx  docs.tsx  index.tsx  leaderboard.tsx  login.tsx  maintenance.tsx  pricing.tsx  reviews.tsx  terms.tsx
src/routes/api/: bots.ts  reviews.ts
src/routes/api/ai/: generate-actions.ts
src/routes/api/auth/: discord.callback.ts  discord.ts  key-login.ts
src/routes/api/bots/: -ai-overrides.ts  create.ts  delete.ts  start.ts  stop.ts  update.ts
src/routes/api/global-chat/: bot-sync.ts  delete-own.ts  moderate.ts  send.ts
src/routes/api/guild/chat/: channels.ts  config.ts  guilds.ts  members.ts  messages.ts  send.ts
src/routes/api/payments/: callback.ts
src/routes/api/runner/: callback.ts  captcha.ts  events.ts  global-chat.ts  identity.ts  logs.ts  outbox.ts  payments.ts  stream.ts  world.ts
src/routes/api/vpn/: check.ts
